# Aida

./: README.md  config.example.yaml  pyproject.toml  requirements.txt
aida/: __init__.py  cli.py  config.py  core.py  gui.py  preprocessor.py
aida/providers/: __init__.py  base.py  factory.py  gemini.py  ollama.py
aida/tools/: coder_tool.py  validated_shelltool.py
tests/: test_aida.py  test_config.py  test_preprocessor.py
