[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "aida"
version = "0.1.0"
authors = [
]
description = "An AI assistant"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "langchain>=0.0.335",
    "langchain-community>=0.0.10",
    "langchain-ollama>=0.0.1",
    "python-dotenv>=1.0.0",
    "pytest>=7.4.3",
    "requests>=2.31.0",
    "pyyaml>=6.0.1",
]

[tool.setuptools.packages.find]
include = ["aida*"] 